fixed hero figure spacing in metropole

--- a/assets/sass/rennes-hugo/design-system/_hero-home-metropole.sass
+++ b/assets/sass/rennes-hugo/design-system/_hero-home-metropole.sass
@@ -88,7 +88,9 @@
     @include media-breakpoint-up(md)
       .content
         align-items: flex-start
-      
+        padding-top: 0
+        margin-top: $spacing-1
+
       .hero-text,
       .hero-menu
           width: columns(6)
